--- a/ReservationGanttChart/GanttItemView.xib
+++ b/ReservationGanttChart/GanttItemView.xib
@@ -11,18 +11,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GanttItemView" customModule="ReservationGanttChart" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="421" height="154"/>
+            <rect key="frame" x="0.0" y="0.0" width="313" height="35"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dot" translatesAutoresizingMaskIntoConstraints="NO" id="8wN-0Z-cLs">
-                    <rect key="frame" x="14" y="11.5" width="8" height="8"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="8" id="GDA-8j-9b1"/>
-                        <constraint firstAttribute="width" constant="8" id="sKz-Tn-5hB"/>
-                    </constraints>
-                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lydia Donin, $2690, Deluxe Twin Room" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyB-vA-6MC">
-                    <rect key="frame" x="30" y="8" width="383" height="14.5"/>
+                    <rect key="frame" x="8" y="8" width="297" height="14.5"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -31,18 +24,15 @@
             <color key="backgroundColor" name="infoDark"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="cyB-vA-6MC" secondAttribute="trailing" constant="8" id="66i-wG-Ozi"/>
-                <constraint firstItem="cyB-vA-6MC" firstAttribute="leading" secondItem="8wN-0Z-cLs" secondAttribute="trailing" constant="8" id="6SL-g4-HmU"/>
-                <constraint firstItem="8wN-0Z-cLs" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="14" id="TQY-3h-pPo"/>
-                <constraint firstItem="8wN-0Z-cLs" firstAttribute="centerY" secondItem="cyB-vA-6MC" secondAttribute="centerY" id="U4m-YR-DLh"/>
                 <constraint firstItem="cyB-vA-6MC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="ten-ii-IHN"/>
+                <constraint firstItem="cyB-vA-6MC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="yqt-Ti-MPy"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="136.95652173913044" y="-100.44642857142857"/>
+            <point key="canvasLocation" x="58.695652173913047" y="-140.29017857142856"/>
         </view>
     </objects>
     <resources>
-        <image name="dot" width="6" height="6"/>
         <namedColor name="infoDark">
             <color red="0.0" green="0.47450980392156861" blue="0.61960784313725492" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
