--- a/ReservationGanttChart/GanttItemView.xib
+++ b/ReservationGanttChart/GanttItemView.xib
@@ -8,14 +8,18 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GanttItemView" customModule="ReservationGanttChart" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GanttItemView" customModule="ReservationGanttChart" customModuleProvider="target">
+            <connections>
+                <outlet property="contentView" destination="iN0-l3-epB" id="mKz-Zq-PfH"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="313" height="35"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lydia Donin, $2690, Deluxe Twin Room" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cyB-vA-6MC">
-                    <rect key="frame" x="8" y="8" width="297" height="14.5"/>
+                    <rect key="frame" x="8" y="10.5" width="297" height="14.5"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -24,7 +28,7 @@
             <color key="backgroundColor" name="infoDark"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="cyB-vA-6MC" secondAttribute="trailing" constant="8" id="66i-wG-Ozi"/>
-                <constraint firstItem="cyB-vA-6MC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="ten-ii-IHN"/>
+                <constraint firstItem="cyB-vA-6MC" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="h74-KX-Dzi"/>
                 <constraint firstItem="cyB-vA-6MC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="yqt-Ti-MPy"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
